--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -68,3 +68,7 @@
                 Accédez à vos informations et fichiers
             </p>
             <p class="mt-4 max-w-2xl text-xl text-gray-500 mx-auto">
+            </p>
+        </div>
+    </div>
+</section>
