--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -38,7 +38,7 @@
 </header>
 
 <!-- User Section -->
-<section class="bg-red-700">
+<section class="bg-green-500">
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 flex flex-col lg:flex-row items-center">
         <div class="lg:w-1/2 lg:pr-12 mb-10 lg:mb-0">
             <h1 class="text-4xl font-extrabold tracking-tight text-white sm:text-5xl lg:text-6xl">
